--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   github           : "jessb0t"
   googlescholar    : "https://scholar.google.com/citations?user=hECFAHAAAAAJ&hl=en&oi=ao"
   researchgate     : "https://www.researchgate.net/profile/Jessica-Alexander-26"
-  linkedin         : "https://www.linkedin.com/in/jessmalexander/"
+  linkedin         : "jessmalexander"
   twitter          : je55bot
 
 
